--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -2,18 +2,21 @@ on:
   push:
     branches: [ main ]
 jobs:
-  build:
+  build-apk:
     runs-on: ubuntu-latest
-    steps:
-      - name: Setup Flutter FVM
-        uses: actions/checkout@v2
-      - uses: kuhnroyal/flutter-fvm-config-action@v1
-      - uses: subosito/flutter-action@v2
+    steps: 
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
         with:
-          flutter-version: 3.9.0-1.0.pre.51
-          channel: main
-  unit-test:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Run Flutter Test
-          run: flutter test
+          java-version: '12.x'
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '3.9.0-1.0.pre.51'
+          channel: stable
+      - name: Build apk
+        run: |
+          flutter pub get
+          flutter format --set-exit-if-changed .
+          flutter analyze
+          flutter test
+          flutter build apk --debug
