--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -11,7 +11,7 @@ jobs:
           java-version: '12.x'
       - uses: subosito/flutter-action@v1
         with:
-          flutter-version: '3.9.0-1.0.pre.51'
+          flutter-version: '3.9.0'
           channel: stable
       - name: Build apk
         run: |
