--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -15,6 +15,7 @@ jobs:
           channel: stable
       - name: Build apk
         run: |
+          cd .\front\
           flutter pub get
           flutter format --set-exit-if-changed .
           flutter analyze
