--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -17,6 +17,7 @@ jobs:
         run: |
           ls
           cd front
+          flutter upgrade
           flutter pub get
           flutter format --set-exit-if-changed .
           flutter analyze
