--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -19,7 +19,25 @@ jobs:
           cd front
           flutter upgrade
           flutter pub get
-          flutter format --set-exit-if-changed .
+          flutter format --set-exit-if-changed
           flutter analyze
           flutter test
           flutter build apk --debug
+  build-web:
+    runs-on: ubuntu-latest
+    steps:
+     - uses: actions/checkout@v2
+     - uses: subosito/flutter-action@v1
+       with:
+         flutter-version: '3.7.3'
+     - name: Build apk
+     - name: Build apk
+       run: |
+         ls
+         cd front
+         flutter upgrade
+         flutter pub get
+         flutter format --set-exit-if-changed
+         flutter analyze
+         flutter test
+         flutter build web
