--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -26,18 +26,17 @@ jobs:
   build-web:
     runs-on: ubuntu-latest
     steps:
-     - uses: actions/checkout@v2
-     - uses: subosito/flutter-action@v1
-       with:
-         flutter-version: '3.7.3'
-     - name: Build apk
-     - name: Build apk
-       run: |
-         ls
-         cd front
-         flutter upgrade
-         flutter pub get
-         flutter format --set-exit-if-changed
-         flutter analyze
-         flutter test
-         flutter build web
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '3.7.3'
+      - name: Build web
+        run: |
+          ls
+          cd front
+          flutter upgrade
+          flutter pub get
+          flutter format --set-exit-if-changed
+          flutter analyze
+          flutter test
+          flutter build web
