--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           java-version: '12.x'
+          distribution: 'temurin'
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.7.3'
