--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -20,7 +20,7 @@ jobs:
           cd front
           flutter upgrade
           flutter pub get
-          flutter format --set-exit-if-changed
+          flutter format --set-exit-if-changed .
           flutter test
           flutter build apk --debug
   build-web:
@@ -36,6 +36,6 @@ jobs:
           cd front
           flutter upgrade
           flutter pub get
-          flutter format --set-exit-if-changed
+          flutter format --set-exit-if-changed .
           flutter test
           flutter build web
