--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -21,6 +21,7 @@ jobs:
           flutter upgrade
           flutter pub get
           flutter format --set-exit-if-changed .
+          flutter analyse
           flutter test
           flutter build apk --debug
   build-web:
@@ -37,5 +38,6 @@ jobs:
           flutter upgrade
           flutter pub get
           flutter format --set-exit-if-changed .
+          flutter analyse
           flutter test
           flutter build web
