--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -2,45 +2,45 @@ on:
   push:
     branches: [ main ]
 jobs:
-  build-apk:
-    runs-on: ubuntu-latest
-    steps: 
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v3
-        with:
-          java-version: '17.x'
-          distribution: 'temurin'
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.7.3'
-          channel: stable
-      - name: Build apk
-        run: |
-          ls
-          cd front
-          flutter upgrade
-          flutter pub get
-          flutter format --set-exit-if-changed .
-          flutter analyze
-          flutter test
-          flutter build apk --debug
-  build-web:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1
-        with:
-          flutter-version: '3.7.3'
-      - name: Build web
-        run: |
-          ls
-          cd front
-          flutter upgrade
-          flutter pub get
-          flutter format --set-exit-if-changed .
-          flutter analyze
-          flutter test
-          flutter build web
+  # build-apk:
+    # runs-on: ubuntu-latest
+    # steps: 
+      # - uses: actions/checkout@v2
+      # - uses: actions/setup-java@v3
+        # with:
+          # java-version: '17.x'
+          # distribution: 'temurin'
+      # - uses: subosito# /flutter-action@v2
+        # with:
+          # flutter-version: '3.7.3'
+          # channel: stable
+      # - name: Build apk
+        # run: |
+          # ls
+          # cd front
+          # flutter upgrade
+          # flutter pub get
+          # flutter format --set-exit-if-changed .
+          # flutter analyze
+          # flutter test
+          # flutter build apk --debug
+  # build-web:
+    # runs-on: ubuntu-latest
+    # steps:
+      # - uses: actions/checkout@v2
+      # - uses: subosito/flutter-action@v1
+        # with:
+          # flutter-version: '3.7.3'
+      # - name: Build web
+        # run: |
+          # ls
+          # cd front
+          # flutter upgrade
+          # flutter pub get
+          # flutter format --set-exit-if-changed .
+          # flutter analyze
+          # flutter test
+          # flutter build web
   build-front:
     runs-on: ubuntu-latest
     steps:
