--- a/back/package.json
+++ b/back/package.json
@@ -4,13 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --testTimeout=10000",
+    "start": "tsc && node ./dist/server.js",
+    "start:dev": "ts-node-dev ./src/server.ts",
+    "build": "tsc --build"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.14.6",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
+    "express": "^4.18.2",
+    "jest": "^29.5.0"
   }
 }
