--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -51,7 +51,7 @@ jobs:
       - name: Build
         run: |
           cd back
-          npm run i
+          npm i
           npm run test
           npm run build
     
