--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -10,7 +10,7 @@ jobs:
         with:
           java-version: '17.x'
           distribution: 'temurin'
-      - uses: subosito# /flutter-action@v2
+      - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.7.3'
           channel: stable
