--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -103,6 +103,7 @@
     "exclude": [
       "node_modules",
       "./dist/**/*",
-      "babel.config.js"
+      "babel.config.js",
+      "__test__"
     ]
   }
