--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --testTimeout=10000",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --testTimeout=10000 --coverage && coveralls < coverage/lcov.info",
     "start": "tsc && node ./dist/server.js",
     "start:dev": "ts-node-dev ./src/server.ts",
     "build": "tsc --build"
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.6",
+    "coveralls": "^3.1.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
