--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -104,6 +104,8 @@
       "node_modules",
       "./dist/**/*",
       "babel.config.js",
-      "__test__"
+      "__test__",
+      "/home/runner/work/test-cli/**/*",
+      "coverage"
     ]
   }
