--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -57,4 +57,6 @@ jobs:
           cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
       - name: Coveralls
         uses: coverallsapp/github-action@v1
+        with: 
+          github-token: ${{ secrets.GITHUB_TOKEN }}
     
