--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --testTimeout=10000 --coverage && coveralls < coverage/lcov.info",
+    "test": "node --trace-uncaught --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --testTimeout=10000 --coverage",
     "start": "tsc && node ./dist/server.js",
     "start:dev": "ts-node-dev ./src/server.ts",
     "build": "tsc --build"
