--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -54,7 +54,7 @@ jobs:
           npm ci
           npm run build --if-present
           npm run test
-          cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+          cat ./coverage/lcov.info && rm -rf ./coverage
       - name: Coveralls
         uses: coverallsapp/github-action@v1
         with: 
