--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -54,6 +54,7 @@ jobs:
           npm ci
           npm run build --if-present
           npm run test
+          cd coverage
           ls
           cat ./coverage/lcov.info && rm -rf ./coverage
       - name: Coveralls
