--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -54,7 +54,8 @@ jobs:
           npm ci
           npm run build --if-present
           npm run test
-          cat ./coverage/lcov.info
+          cd coverage
+          ls
       - name: Coveralls
         uses: coverallsapp/github-action@v1
         with: 
