--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -43,17 +43,17 @@ jobs:
           flutter build web
   build-back:
     runs-on: ubuntu-latest
+    defaults:
+      run: 
+        working-directory: ./back
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with: 
           node-version: 18
-      - name: move to back
-        run: cd back
-      - name: show content
-        run: ls
       - name: Build
         run: |
+          ls
           cd back
           npm ci
           npm run build --if-present
