--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -56,7 +56,8 @@ jobs:
           npm ci
           npm run build --if-present
           npm run test
-          ls
+      - name: Check content
+        run: ls
       - name: Coveralls
         uses: coverallsapp/github-action@v1
         with: 
