--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -60,7 +60,9 @@ jobs:
         run: |
           cat ./coverage/lcov.info
       - name: Coveralls
-        uses: coverallsapp/github-action@v1
+        uses: |
+          ls
+          coverallsapp/github-action@v1
         with: 
           github-token: ${{ secrets.GITHUB_TOKEN }}
     
