--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -58,6 +58,8 @@ jobs:
         run: |
           cat ./back/coverage/lcov.info
       - name: Coveralls
+        env:
+          NODE_COVERALLS_DEBUG: 1
         uses: coverallsapp/github-action@v1
         with: 
           path-to-lcov: ./back/coverage/lcov.info
