--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -56,7 +56,7 @@ jobs:
           npm run test
       - name: Check content
         run: |
-          cd back
+          cd back/coverage
           ls
       - name: Coveralls
         env:
