--- a/back/package.json
+++ b/back/package.json
@@ -23,5 +23,9 @@
     "@babel/preset-typescript": "^7.21.0",
     "express": "^4.18.2",
     "jest": "^29.5.0"
+  },
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   }
 }
