--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -63,6 +63,6 @@ jobs:
           NODE_COVERALLS_DEBUG: 1
         uses: coverallsapp/github-action@v1
         with: 
-          path-to-lcov: ./back/coverage/lcov.info
+          path-to-lcov: ${{ github.workspace }}/back/coverage/lcov.info
           github-token: ${{ secrets.GITHUB_TOKEN }}
     
