--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -58,9 +58,11 @@ jobs:
           npm run test
       - name: Check content
         run: cat ./coverage/lcov.info
+      - uses: actions/checkout@v3
       - name: Coveralls
         env:
           NODE_COVERALLS_DEBUG: 1
+          COVERALLS_DEBUG: 1
         uses: coverallsapp/github-action@v1
         with: 
           path-to-lcov: ${{ github.workspace }}/back/coverage/lcov.info
