--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -58,12 +58,13 @@ jobs:
           npm run test
       - name: Check content
         run: cat ./coverage/lcov.info
-      - name: Coveralls
-        env:
-          NODE_COVERALLS_DEBUG: 1
-          COVERALLS_DEBUG: 1
-        uses: coverallsapp/github-action@v1
-        with: 
-          path-to-lcov: ${{ github.workspace }}/back/coverage/lcov.info
+      - name: Report code coverage
+        uses: zgosalvez/github-actions-report-lcov@v3
+        with:
+          coverage-files: coverage/lcov.info
+          minimum-coverage: 90
+          artifact-name: code-coverage-report
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          working-directory: back
+          update-comment: true
     
