--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -4,6 +4,9 @@ on:
 jobs: 
   build-apk:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: front
     steps: 
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
@@ -14,15 +17,20 @@ jobs:
         with:
           flutter-version: '3.7.3'
           channel: stable
+      - name: Install lcov
+        run: |
+          sudo apt update
+          sudo apt install lcov 
       - name: Build apk
         run: |
-          ls
-          cd front
-          flutter upgrade
           flutter pub get
           flutter format --set-exit-if-changed .
           flutter analyze
-          flutter test
+          flutter test --coverage
+          #Remove generated sources and entities from coverage
+          lcov --remove coverage/lcov.info -o coverage/lcov.info '**/*.g.dart' '**/*.freezed.dart' '**/entities/**' '**/*_state.dart' '**/core/**'
+          #Generate coverage report and expose it in GitHub Pages repository
+          genhtml coverage/lcov.info -o docs/ 
           flutter build apk --debug
   build-web:
     runs-on: ubuntu-latest
@@ -58,15 +66,4 @@ jobs:
           npm run test
       - name: Check content
         run: cat ./coverage/lcov.info
-      - name: Setup LCOV
-        uses: hrishikesh-kadam/setup-lcov@v1
-      - name: Report code coverage
-        uses: zgosalvez/github-actions-report-lcov@v3
-        with:
-          coverage-files: ./coverage/lcov.info
-          minimum-coverage: 90
-          artifact-name: code-coverage-report
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          working-directory: back
-          update-comment: true
     
