--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -1,5 +1,5 @@
 on:
-  pull_request:
+  push:
     branches: [ main ] 
 jobs: 
   build-apk:
@@ -64,4 +64,16 @@ jobs:
           npm run build --if-present
       - name: Check content
         run: cat ./coverage/lcov.info
+      # ... Generate LCOV files or download it from a different job
+      - name: Setup LCOV
+        uses: hrishikesh-kadam/setup-lcov@v1
+      - name: Report code coverage
+        uses: zgosalvez/github-actions-report-lcov@v3
+        with:
+          coverage-files: ./coverage/lcov.info
+          minimum-coverage: 90
+          artifact-name: code-coverage-report
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          working-directory: .
+          update-comment: true
     
