--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -49,8 +49,6 @@ jobs:
           flutter build web
   build-back:
     runs-on: ubuntu-latest
-    env:
-      ACTION_STEP_DEBUG: true
     defaults: 
       run:
         working-directory: back
@@ -69,6 +67,8 @@ jobs:
       # ... Generate LCOV files or download it from a different job
       - name: Setup LCOV
         uses: hrishikesh-kadam/setup-lcov@v1
+      - name: genhtml
+        run: genhtml --help
       - name: Report code coverage
         uses: zgosalvez/github-actions-report-lcov@v3
         with:
