--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -68,7 +68,7 @@ jobs:
       - name: Setup LCOV
         uses: hrishikesh-kadam/setup-lcov@v1
       - name: genhtml
-        run: genhtml --help
+        run: genhtml --config-file ./coverage/lcov.info
       - name: Report code coverage
         uses: zgosalvez/github-actions-report-lcov@v3
         with:
