--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,5 +10,5 @@ jobs:
       - uses: actions/checkout@v1
       - name: show text in console
         run: |
-          echo "release tag : ${{ github.event.release.number }}"
+          echo "release tag : ${{ github.event.release.tag_name }}"
           echo "release name : ${{ github.event.release.name }}"
