--- a/.github/workflows/check_pr_follow_up.yaml
+++ b/.github/workflows/check_pr_follow_up.yaml
@@ -5,10 +5,17 @@ on:
     types:
       - completed
 jobs:
-  wait_and_echo:
+  on-failure:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - name: show text in console
         run: |
-          echo "ceci est un message"
+          echo "Le workflow précédent a fail"
+  on-success:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: show text in console
+        run: |
+          echo "Le workflow précédent a réussi"
